added api to complete plans
